coding the handling of the weather api object

--- a/notebooks/api_C.ipynb
+++ b/notebooks/api_C.ipynb
@@ -28,42 +28,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'coord': {'lon': 144.8448, 'lat': -37.6637},\n",
-       " 'weather': [{'id': 801,\n",
-       "   'main': 'Clouds',\n",
-       "   'description': 'few clouds',\n",
-       "   'icon': '02n'}],\n",
+       " 'weather': [{'id': 800,\n",
+       "   'main': 'Clear',\n",
+       "   'description': 'clear sky',\n",
+       "   'icon': '01n'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 285.88,\n",
-       "  'feels_like': 284.85,\n",
-       "  'temp_min': 284.29,\n",
-       "  'temp_max': 286.61,\n",
-       "  'pressure': 1020,\n",
-       "  'humidity': 63,\n",
-       "  'sea_level': 1020,\n",
-       "  'grnd_level': 1005},\n",
+       " 'main': {'temp': 287.38,\n",
+       "  'feels_like': 286.9,\n",
+       "  'temp_min': 286.44,\n",
+       "  'temp_max': 288.59,\n",
+       "  'pressure': 1010,\n",
+       "  'humidity': 78,\n",
+       "  'sea_level': 1010,\n",
+       "  'grnd_level': 995},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 4.63, 'deg': 360},\n",
-       " 'clouds': {'all': 24},\n",
-       " 'dt': 1724320692,\n",
+       " 'wind': {'speed': 19.03, 'deg': 10, 'gust': 26.75},\n",
+       " 'clouds': {'all': 0},\n",
+       " 'dt': 1724421824,\n",
        " 'sys': {'type': 1,\n",
        "  'id': 9554,\n",
        "  'country': 'AU',\n",
-       "  'sunrise': 1724273785,\n",
-       "  'sunset': 1724313063},\n",
+       "  'sunrise': 1724446423,\n",
+       "  'sunset': 1724485964},\n",
        " 'timezone': 36000,\n",
-       " 'id': 2164495,\n",
-       " 'name': 'Greenvale',\n",
+       " 'id': 6693767,\n",
+       " 'name': 'Attwood',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,6 +103,186 @@
     "\n",
     "json_response"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temp</th>\n",
+       "      <th>feels_like_temp</th>\n",
+       "      <th>alt_pressure</th>\n",
+       "      <th>sl_pressure</th>\n",
+       "      <th>visibility</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>wind_gust</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>287.38</td>\n",
+       "      <td>286.9</td>\n",
+       "      <td>1010</td>\n",
+       "      <td>1010</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>19.03</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     temp  feels_like_temp  alt_pressure  sl_pressure  visibility  wind_speed  \\\n",
+       "0  287.38            286.9          1010         1010       10000       19.03   \n",
+       "\n",
+       "   wind_gust  \n",
+       "0         10  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(dict(temp = json_response['main']['temp'],\n",
+    "feels_like_temp = json_response['main']['feels_like'],\n",
+    "alt_pressure = json_response['main']['pressure'],\n",
+    "sl_pressure = json_response['main']['sea_level'],\n",
+    "visibility = json_response['visibility'],\n",
+    "wind_speed = json_response['wind']['speed'],\n",
+    "wind_gust = json_response['wind']['deg']\n",
+    "#precipitation - need to find a source for this\n",
+    "#ice_accretion_3hr - need to find a source for this\n",
+    "),index = [0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(json_response['main']['temp'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temp</th>\n",
+       "      <th>feels_like_temp</th>\n",
+       "      <th>alt_pressure</th>\n",
+       "      <th>sl_pressure</th>\n",
+       "      <th>visibility</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>wind_gust</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>287.38</td>\n",
+       "      <td>286.9</td>\n",
+       "      <td>1010</td>\n",
+       "      <td>1010</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>19.03</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     temp  feels_like_temp  alt_pressure  sl_pressure  visibility  wind_speed  \\\n",
+       "0  287.38            286.9          1010         1010       10000       19.03   \n",
+       "\n",
+       "   wind_gust  \n",
+       "0         10  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "    \"temp\": json_response['main']['temp'],\n",
+    "    \"feels_like_temp\": json_response['main']['feels_like'],\n",
+    "    \"alt_pressure\": json_response['main']['pressure'],\n",
+    "    \"sl_pressure\": json_response['main']['sea_level'],\n",
+    "    \"visibility\": json_response['visibility'],\n",
+    "    \"wind_speed\": json_response['wind']['speed'],\n",
+    "    \"wind_gust\": json_response['wind']['deg']\n",
+    "}, index = [0])\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -807,6 +987,227 @@
    ],
    "source": [
     "preprocessed_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Handling Airport Geocodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IATA_CODE</th>\n",
+       "      <th>AIRPORT</th>\n",
+       "      <th>CITY</th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>COUNTRY</th>\n",
+       "      <th>LATITUDE</th>\n",
+       "      <th>LONGITUDE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ABE</td>\n",
+       "      <td>Lehigh Valley International Airport</td>\n",
+       "      <td>Allentown</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>40.65236</td>\n",
+       "      <td>-75.44040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ABI</td>\n",
+       "      <td>Abilene Regional Airport</td>\n",
+       "      <td>Abilene</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>32.41132</td>\n",
+       "      <td>-99.68190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ABQ</td>\n",
+       "      <td>Albuquerque International Sunport</td>\n",
+       "      <td>Albuquerque</td>\n",
+       "      <td>NM</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>35.04022</td>\n",
+       "      <td>-106.60919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABR</td>\n",
+       "      <td>Aberdeen Regional Airport</td>\n",
+       "      <td>Aberdeen</td>\n",
+       "      <td>SD</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>45.44906</td>\n",
+       "      <td>-98.42183</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABY</td>\n",
+       "      <td>Southwest Georgia Regional Airport</td>\n",
+       "      <td>Albany</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>31.53552</td>\n",
+       "      <td>-84.19447</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  IATA_CODE                              AIRPORT         CITY STATE COUNTRY  \\\n",
+       "0       ABE  Lehigh Valley International Airport    Allentown    PA     USA   \n",
+       "1       ABI             Abilene Regional Airport      Abilene    TX     USA   \n",
+       "2       ABQ    Albuquerque International Sunport  Albuquerque    NM     USA   \n",
+       "3       ABR            Aberdeen Regional Airport     Aberdeen    SD     USA   \n",
+       "4       ABY   Southwest Georgia Regional Airport       Albany    GA     USA   \n",
+       "\n",
+       "   LATITUDE  LONGITUDE  \n",
+       "0  40.65236  -75.44040  \n",
+       "1  32.41132  -99.68190  \n",
+       "2  35.04022 -106.60919  \n",
+       "3  45.44906  -98.42183  \n",
+       "4  31.53552  -84.19447  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from lateguru_ml.ml_logic.data import load_airport_geo_data\n",
+    "airport_geo_df = load_airport_geo_data('../raw_data/Dataset_A/Dataset_A_US2023_Kaggle_airports_geolocation.csv')\n",
+    "\n",
+    "airport_geo_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_airport_geos_df = airport_geo_df[['IATA_CODE', 'LATITUDE', 'LONGITUDE']]\\\n",
+    "    .rename(columns={'IATA_CODE': 'airport_acronym',\n",
+    "                     'LATITUDE': 'lat',\n",
+    "                     'LONGITUDE':'lon'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>airport_acronym</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ABE</td>\n",
+       "      <td>40.65236</td>\n",
+       "      <td>-75.44040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ABI</td>\n",
+       "      <td>32.41132</td>\n",
+       "      <td>-99.68190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ABQ</td>\n",
+       "      <td>35.04022</td>\n",
+       "      <td>-106.60919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABR</td>\n",
+       "      <td>45.44906</td>\n",
+       "      <td>-98.42183</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABY</td>\n",
+       "      <td>31.53552</td>\n",
+       "      <td>-84.19447</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  airport_acronym       lat        lon\n",
+       "0             ABE  40.65236  -75.44040\n",
+       "1             ABI  32.41132  -99.68190\n",
+       "2             ABQ  35.04022 -106.60919\n",
+       "3             ABR  45.44906  -98.42183\n",
+       "4             ABY  31.53552  -84.19447"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_airport_geos_df.head()"
    ]
   },
   {
