--- a/notebooks/api_C.ipynb
+++ b/notebooks/api_C.ipynb
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
     "    json_response = response.json()\n",
     "\n",
     "\n",
-    "    weather_dict = {\n",
+    "    ''' weather_dict = {\n",
     "    \"temp\": json_response['main']['temp'],\n",
     "    \"feels_like_temp\": json_response['main']['feels_like'],\n",
     "    \"alt_pressure\": json_response['main']['pressure'],\n",
@@ -430,10 +430,10 @@
     "    \"wind_speed\": json_response['wind']['speed'],\n",
     "    \"wind_gust\": json_response['wind']['deg']\n",
     "    #precipitation and ice accretion to be added\n",
-    "    }\n",
+    "    }'''\n",
     "\n",
     "    #clean up json response object before outputting data\n",
-    "    return weather_dict\n"
+    "    return json_response\n"
    ]
   },
   {
@@ -457,22 +457,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'temp': 294.56,\n",
-       " 'feels_like_temp': 294.79,\n",
-       " 'alt_pressure': 1014,\n",
-       " 'sl_pressure': 1014,\n",
+       "{'coord': {'lon': -118.4081, 'lat': 33.9425},\n",
+       " 'weather': [{'id': 801,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'few clouds',\n",
+       "   'icon': '02n'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 293.77,\n",
+       "  'feels_like': 293.95,\n",
+       "  'temp_min': 292.6,\n",
+       "  'temp_max': 297.28,\n",
+       "  'pressure': 1015,\n",
+       "  'humidity': 79,\n",
+       "  'sea_level': 1015,\n",
+       "  'grnd_level': 1010},\n",
        " 'visibility': 10000,\n",
-       " 'wind_speed': 6.17,\n",
-       " 'wind_gust': 250}"
+       " 'wind': {'speed': 6.17, 'deg': 250, 'gust': 10.29},\n",
+       " 'clouds': {'all': 20},\n",
+       " 'dt': 1724553226,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 4667,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1724505738,\n",
+       "  'sunset': 1724552986},\n",
+       " 'timezone': -25200,\n",
+       " 'id': 5345860,\n",
+       " 'name': 'El Segundo',\n",
+       " 'cod': 200}"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
