changes to api file

--- a/notebooks/EDA_C.ipynb
+++ b/notebooks/EDA_C.ipynb
@@ -4142,6 +4142,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "id": "c88502d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['JFK', 'HNL', 'DFW', 'CLT', 'KOA', 'PHX', 'OGG', 'ORD', 'MIA',\n",
+       "       'PHL', 'LAS', 'DCA', 'AUS', 'MCO', 'BNA', 'BOS', 'SEA', 'FLL',\n",
+       "       'PDX', 'EWR', 'GEG', 'RSW', 'SFO', 'TPA', 'ANC', 'CHS', 'BUF',\n",
+       "       'RIC', 'RNO', 'SLC', 'BDL', 'MTJ', 'RDU', 'PBI', 'BZN', 'ATL',\n",
+       "       'LIH', 'DTW', 'MSP', 'DEN', 'CVG', 'MEM', 'MSY', 'PVU', 'BOI',\n",
+       "       'MFR', 'EUG', 'BLI', 'TUL', 'SGF', 'BWI', 'CLE', 'IAH', 'MCI',\n",
+       "       'PIT', 'OAK', 'EGE', 'OKC', 'JAC', 'ASE', 'SAN', 'PRC', 'SMF',\n",
+       "       'RDM', 'SBP', 'HDN', 'PSP', 'ACV', 'FAT', 'MRY', 'SUN', 'DAL',\n",
+       "       'SJC', 'STS', 'ABQ', 'TUS', 'SAT', 'MSO', 'IAD', 'HOU', 'MDW',\n",
+       "       'STL', 'ELP', 'FCA', 'OMA', 'SBA', 'COS', 'RDD', 'ITO', 'SBN',\n",
+       "       'IND', 'SHV', 'GRR', 'LGA', 'SDF', 'MKE', 'CMH', 'JAX', 'DSM',\n",
+       "       'XNA', 'BIH', 'PAE', 'GJT', 'BIL', 'DRO', 'SAF', 'ICT', 'LIT',\n",
+       "       'FAR', 'MFE', 'CID', 'RAP', 'IDA', 'PSC', 'FSD', 'SCK', 'BTR',\n",
+       "       'MSN', 'SNA', 'ORF', 'GUC', 'ONT', 'LAX', 'BUR', 'SJU', 'EYW',\n",
+       "       'STT', 'GRK', 'CRP', 'JAN', 'ACT', 'SAV', 'AEX', 'TYR', 'CAE',\n",
+       "       'PNS', 'GNV', 'BRO', 'BHM', 'SJT', 'BPT', 'HSV', 'LFT', 'COU',\n",
+       "       'LCH', 'LBB', 'MDT', 'MLU', 'CHA', 'SWO', 'SRQ', 'GSP', 'TXK',\n",
+       "       'VPS', 'CMI', 'TYS', 'AMA', 'MOB', 'GGG', 'ABI', 'LRD', 'GRI',\n",
+       "       'ILM', 'LEX', 'LAW', 'SPS', 'MYR', 'MHK', 'DAY', 'EVV', 'CLL',\n",
+       "       'SPI', 'MGM', 'AGS', 'GCK', 'FSM', 'GPT', 'DRT', 'DAB', 'ECP',\n",
+       "       'BIS', 'HRL', 'JLN', 'TRI', 'FLG', 'FWA', 'BMI', 'TLH', 'YUM',\n",
+       "       'ROW', 'GSO', 'BFL', 'MLI', 'PIA', 'MAF', 'AVL', 'SGU', 'BTV',\n",
+       "       'LGB', 'TVC', 'SYR', 'FAY', 'CSG', 'PWM', 'FAI', 'BGR', 'MLB',\n",
+       "       'HHH', 'GRB', 'ALB', 'ACY', 'ROC', 'CPR', 'DIK', 'MOT', 'GTF',\n",
+       "       'HLN', 'LNK', 'LBL', 'RST', 'BFF', 'CNY', 'GCC', 'PUB', 'LBF',\n",
+       "       'EAR', 'ALS', 'HYS', 'LAR', 'SLN', 'VEL', 'RKS', 'JMS', 'ATY',\n",
+       "       'SUX', 'SHR', 'RIW', 'DDC', 'XWA', 'PIR', 'CYS', 'COD', 'ATW',\n",
+       "       'TWF', 'LWS', 'FOD', 'OTH', 'HOB', 'BKG', 'WYS', 'BTM', 'DVL',\n",
+       "       'PVD', 'ABE', 'CHO', 'OAJ', 'DHN', 'VLD', 'BQK', 'ABY', 'ROA',\n",
+       "       'CRW', 'GTR', 'STX', 'TTN', 'HPN', 'ISP', 'SCE', 'SWF', 'ALO',\n",
+       "       'AZO', 'LSE', 'FNT', 'TOL', 'CWA', 'LAN', 'DBQ', 'AVP', 'MQT',\n",
+       "       'MHT', 'MKG', 'JST', 'PAH', 'CMX', 'CGI', 'EAU', 'OGS', 'SHD',\n",
+       "       'LWB', 'CKB', 'DEC', 'DLH', 'MCW', 'TBN', 'MBS', 'ACK', 'RHI',\n",
+       "       'CAK', 'MVY', 'ERI'], dtype=object)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_5_airports_df['Dest'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 52,
    "id": "d0d80009",
    "metadata": {},
@@ -4151,6 +4205,34 @@
     "top_5_airports_output_path = os.path.join(dataset_b_dir, top_5_airports_output_csv)\n",
     "\n",
     "top_5_airports_df.to_csv(top_5_airports_output_path, header=True, index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "bd5bb012",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['American Airlines Inc.', 'Alaska Airlines Inc.',\n",
+       "       'JetBlue Airways', 'Delta Air Lines Inc.',\n",
+       "       'Frontier Airlines Inc.', 'Allegiant Air',\n",
+       "       'Hawaiian Airlines Inc.', 'Spirit Air Lines',\n",
+       "       'SkyWest Airlines Inc.', 'Horizon Air', 'United Air Lines Inc.',\n",
+       "       'Southwest Airlines Co.', 'Endeavor Air Inc.', 'Envoy Air',\n",
+       "       'PSA Airlines Inc.', 'Mesa Airlines Inc.', 'Republic Airline'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_5_airports_df['Carrier'].unique()\n"
    ]
   },
   {
