refactoring weather utils and also app.py to account for the weather variables in the prediction on streamlit

--- a/notebooks/api_C.ipynb
+++ b/notebooks/api_C.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
     "    response = requests.get(url, params=params)\n",
     "    json_response = response.json()\n",
     "\n",
-    "    print(json_response)\n",
+    "    #print(json_response)\n",
     "\n",
     "    df = pd.DataFrame({\n",
     "    \"temp\": json_response['main']['temp'],\n",
@@ -295,23 +295,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'temp': 290.47,\n",
-       " 'feels_like': 290.58,\n",
-       " 'temp_min': 289.19,\n",
-       " 'temp_max': 291.99,\n",
-       " 'pressure': 1016,\n",
-       " 'humidity': 89,\n",
-       " 'sea_level': 1016,\n",
-       " 'grnd_level': 1011}"
+       "{'coord': {'lon': -118.4081, 'lat': 33.9425},\n",
+       " 'weather': [{'id': 801,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'few clouds',\n",
+       "   'icon': '02n'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 292.13,\n",
+       "  'feels_like': 292.43,\n",
+       "  'temp_min': 290.89,\n",
+       "  'temp_max': 294.34,\n",
+       "  'pressure': 1015,\n",
+       "  'humidity': 90,\n",
+       "  'sea_level': 1015,\n",
+       "  'grnd_level': 1011},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 2.57, 'deg': 260},\n",
+       " 'clouds': {'all': 20},\n",
+       " 'dt': 1724749950,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 4667,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1724765065,\n",
+       "  'sunset': 1724811959},\n",
+       " 'timezone': -25200,\n",
+       " 'id': 5345860,\n",
+       " 'name': 'El Segundo',\n",
+       " 'cod': 200}"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,6 +342,33 @@
     "params = {'lat': str(lat), 'lon':str(lon), \"appid\":api_key}\n",
     "response = requests.get(url, params=params)\n",
     "json_response = response.json()\n",
+    "json_response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'temp': 292.13,\n",
+       " 'feels_like': 292.43,\n",
+       " 'temp_min': 290.89,\n",
+       " 'temp_max': 294.34,\n",
+       " 'pressure': 1015,\n",
+       " 'humidity': 90,\n",
+       " 'sea_level': 1015,\n",
+       " 'grnd_level': 1011}"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "json_response['main']"
    ]
   },
@@ -393,19 +439,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'coord': {'lon': -118.4081, 'lat': 33.9425}, 'weather': [{'id': 800, 'main': 'Clear', 'description': 'clear sky', 'icon': '01n'}], 'base': 'stations', 'main': {'temp': 290.5, 'feels_like': 290.64, 'temp_min': 289.19, 'temp_max': 291.85, 'pressure': 1016, 'humidity': 90, 'sea_level': 1016, 'grnd_level': 1011}, 'visibility': 10000, 'wind': {'speed': 2.06, 'deg': 60}, 'clouds': {'all': 0}, 'dt': 1724585802, 'sys': {'type': 1, 'id': 4667, 'country': 'US', 'sunrise': 1724592180, 'sunset': 1724639311}, 'timezone': -25200, 'id': 5345860, 'name': 'El Segundo', 'cod': 200}\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temp</th>\n",
+       "      <th>feels_like_temp</th>\n",
+       "      <th>alt_pressure</th>\n",
+       "      <th>sl_pressure</th>\n",
+       "      <th>visibility</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>wind_gust</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>292.13</td>\n",
+       "      <td>292.43</td>\n",
+       "      <td>1015</td>\n",
+       "      <td>1015</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>2.57</td>\n",
+       "      <td>260</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     temp  feels_like_temp  alt_pressure  sl_pressure  visibility  wind_speed  \\\n",
+       "0  292.13           292.43          1015         1015       10000        2.57   \n",
+       "\n",
+       "   wind_gust  \n",
+       "0        260  "
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_weather = get_weather_data(lat, lon)"
+    "X_weather = get_weather_data(lat, lon)\n",
+    "\n",
+    "X_weather"
    ]
   },
   {
@@ -883,6 +981,56 @@
    ],
    "source": [
     "X_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_weather_data(lat, lon):\n",
+    "    #lat= -37.663712\n",
+    "    #lon= 144.844788\n",
+    "\n",
+    "    url = \"https://api.openweathermap.org/data/2.5/weather?\"\n",
+    "    params = {'lat': str(lat), 'lon':str(lon), \"appid\":'9efa0a3dd9883bae2b9f3bda6eff2e36', \"units\":'imperial'}\n",
+    "    response = requests.get(url, params=params)\n",
+    "    json_response = response.json()\n",
+    "\n",
+    "\n",
+    "\n",
+    "    weather_dict = {\n",
+    "    \"temp\": json_response[\"main\"]['temp'],\n",
+    "    \"feels_like_temp\": json_response['main']['feels_like'],\n",
+    "    \"alt_pressure\": json_response['main']['grnd_level'],\n",
+    "    \"sl_pressure\": json_response['main']['sea_level'],\n",
+    "    \"visibility\": json_response['visibility'],\n",
+    "    \"wind_speed\": json_response['wind']['speed'],\n",
+    "    \"wind_gust\": json_response['wind']['deg']\n",
+    "    #\"rain\": json_response['rain'][\"1h\"]\n",
+    "    #precipitation and ice accretion to be added\n",
+    "    }\n",
+    "\n",
+    "    #clean up json response object before outputting data\n",
+    "    return weather_dict\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'temp': 65.59, 'feels_like_temp': 66.13, 'alt_pressure': 1010, 'sl_pressure': 1014, 'visibility': 10000, 'wind_speed': 6.91, 'wind_gust': 270}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_weather_data(lat,lon))"
    ]
   },
   {
