adding changes made to get_la_lon coordinates to call the relative filepath

--- a/notebooks/api_C.ipynb
+++ b/notebooks/api_C.ipynb
@@ -1035,6 +1035,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fahrenheit_to_kelvin(fahrenheit_feels_like_temp):\n",
+    "    '''Function to convert the feels like temperature from Fahrenheit\n",
+    "    in open weather response to Kelvin as it is in the FORWW dataset'''\n",
+    "    kelvin_feels_like_temp = (fahrenheit_feels_like_temp + 459.67) * 1.8\n",
+    "    return float(kelvin_feels_like_temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_weather_data(lat, lon):\n",
+    "    #lat= -37.663712\n",
+    "    #lon= 144.844788\n",
+    "\n",
+    "    url = \"https://api.openweathermap.org/data/2.5/weather?\"\n",
+    "    params = {'lat': str(lat), 'lon':str(lon), \"appid\":'9efa0a3dd9883bae2b9f3bda6eff2e36', \"units\":'imperial'}\n",
+    "    response = requests.get(url, params=params)\n",
+    "    json_response = response.json()\n",
+    "    #handling the fahrenheit feels like temp and converting to kelvin\n",
+    "    kelvin_feels_like_temp = fahrenheit_to_kelvin(json_response['main']['feels_like'])\n",
+    "\n",
+    "    if json_response.get('rain', None) == None:\n",
+    "\n",
+    "        weather_dict = {\n",
+    "        \"temp\": json_response[\"main\"]['temp'],\n",
+    "        \"feels_like_temp\": kelvin_feels_like_temp,\n",
+    "        \"alt_pressure\": json_response['main']['grnd_level'],\n",
+    "        \"sl_pressure\": json_response['main']['sea_level'],\n",
+    "        \"visibility\": json_response['visibility'],\n",
+    "        \"wind_speed\": json_response['wind']['speed'],\n",
+    "        \"wind_gust\": json_response['wind']['deg'],\n",
+    "        \"rain\": float(0.0)\n",
+    "        #precipitation and ice accretion to be added\n",
+    "        }\n",
+    "\n",
+    "    else:\n",
+    "\n",
+    "        weather_dict = {\n",
+    "        \"temp\": json_response[\"main\"]['temp'],\n",
+    "        \"feels_like_temp\": kelvin_feels_like_temp,\n",
+    "        \"alt_pressure\": json_response['main']['grnd_level'],\n",
+    "        \"sl_pressure\": json_response['main']['sea_level'],\n",
+    "        \"visibility\": json_response['visibility'],\n",
+    "        \"wind_speed\": json_response['wind']['speed'],\n",
+    "        \"wind_gust\": json_response['wind']['deg'],\n",
+    "        \"rain\": json_response['rain'][\"1h\"]\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "\n",
+    "    #clean up json response object before outputting data\n",
+    "    return weather_dict\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'temp': 64.9,\n",
+       " 'feels_like_temp': 945.1800000000001,\n",
+       " 'alt_pressure': 1010,\n",
+       " 'sl_pressure': 1014,\n",
+       " 'visibility': 10000,\n",
+       " 'wind_speed': 5.75,\n",
+       " 'wind_gust': 270,\n",
+       " 'rain': 0.0}"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_weather = get_weather_data(lat, lon)\n",
+    "\n",
+    "X_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
    "outputs": [
